# CareGPT

./: CITATION.cff  LLM_OOV.ipynb  README.md  README_en.md  pyproject.toml  requirements.txt
ChatGPT/: 1_process.py  1_process_plus.py  2_uploadFile.py  3_finetune.py  4_use.py  5_compare.py  7_webui.py  README.md  output.jsonl  test_datasets.jsonl
Gradio/: app.py  model.py  requirements-gradio.txt  style.css
Knowledge/: run.txt
Knowledge/examples/qwen-7b-chat/: react_demo.py
Knowledge/streamlit-demo/streamlit_gallery/components/chat/: streamlit_app.py
Knowledge/streamlit-demo/streamlit_gallery/components/doc_chat/: streamlit_app.py
data/: dataset_info.json  drug.json
data/Hospital Guide/: prompt.txt  导诊指导.json  导诊指导.md  导诊目录.txt
eval/: baichuan53b_output.json  chatglm3_output.json  eval_CMB_qa.py  eval_CMB_qa_carellm.py  eval_baichuan53b.py  eval_chatglm36b.py  output_carebaichuan2.json  result_carebaichuan2.json
eval/Baichuan-13B-Chat-sft-merge/: output.json  result.json
eval/Baichuan-13B-Chat-sft-multi/: output.json  result.json
eval/Baichuan-13B-Chat-sft-super/: output.json  result.json
src/llmtuner/extras/: misc.py
src/llmtuner/tuner/: tune.py
src/llmtuner/tuner/core/: loader.py
