[tool.poetry]
name = "caregpt"
version = "0.1.0"
description = ""
authors = ["hubertshelley <hubertshelley@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.0"
transformers = "^4.38.1"
datasets = "^2.17.1"
accelerate = "^0.27.2"
peft = "^0.8.2"
trl = "0.5.0"
scipy = "^1.12.0"
sentencepiece = "^0.2.0"
tiktoken = "^0.6.0"
jieba = "^0.42.1"
rouge-chinese = "^1.0.3"
nltk = "^3.8.1"
gradio = "3.36.0"
uvicorn = "^0.27.1"
pydantic = "1.10.11"
fastapi = "0.95.1"
sse-starlette = "^2.0.0"
matplotlib = "^3.8.3"
bitsandbytes = "^0.42.0"
httpx = {version = "^0.27.0", extras = ["socks"]}
protobuf = "^4.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
